status messages now disappear after 30 seconds.

synchronized the MailFileSystemView access so its access shouldn't conflict
with any normal Pooka operations.

default server not having an outbox should no longer throw a NPE.

closing a disconnected imap store no longer results in 'please reopen' 
messages.

made status area at bottom smaller.

fixed a bug where the 3rd field was always opening an attachment menu even
if there were no attachments.

fixed save as draft so it actually works now.

added a system tray icon for Pooka (currenly disabled by default; still
experimental).

050505 release
--------------

added -open and --from options to startup.  this allows you to invoke Pooka 
to only send a new message, rather than starting up the entire client.

added a network listener so that, by default, if you try to start up two
Pooka clients from the same Pookarc you instead will just bring the first
one to the foreground.  this also allows an external invocation to contact
a running client to have it open a new message.

trying to sort a MessageTable before all the messages are loaded no longer
results in a gui hang.

we now show a status while closing stores on exit.

fixed a bug where replying to a message in a detached window could result
in the wrong profile being selected by default.

changed the order of saves so that if the save to sent folder fails for
a new message, the message window doesn't disappear until after the
error clears.

050329 release
--------------

optimized large deletes of messages on imap so it doesn't poll the store
for each message removed.

fixed a bug where offline changes might not get caught after reconnection
to imap store.

fixed OutOfMemoryError when trying to subscribe to folders in jdk 1.5.

fixed focus with jdk1.5 and closing internal frames bug.

added some support for the jdk 1.5 Ocean theme.

modified date display to use dd/MM/yy for non-US English.

fixed a few situations in which the mail store could be accessed on the